--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
   <script src="./app.js" defer></script>
 </head>
 <body>
+  <main>
+    <!-- Header section -->
+    <section id="header">
+      <h1 id="logo">calc</h1>
+      <div id="theme">
+        <h4>THEME</h4>
+        <div id="toggle-container">
+          <input type="checkbox" name="check" id="check">
+          <label for="check" class="toggle-btn"></label>
+        </div>
+      </div>
+    </section>
 
+    <!-- Screen section -->
+     <section id="screen">323</section>
 
-  
+     <!-- button section -->
+      <section id="btn-container">
+        <button class="digit-btn">7</button>
+        <button class="digit-btn">8</button>
+        <button class="digit-btn">9</button>
+        <button class="" id="del-btn">DEL</button>
+        <button class="digit-btn">4</button>
+        <button class="digit-btn">5</button>
+        <button class="digit-btn">6</button>
+        <button class="digit-btn">+</button>
+        <button class="digit-btn">1</button>
+        <button class="digit-btn">2</button>
+        <button class="digit-btn">3</button>
+        <button class="digit-btn">-</button>
+        <button class="digit-btn">.</button>
+        <button class="digit-btn">0</button>
+        <button class="digit-btn">/</button>
+        <button class="digit-btn">x</button>
+        <button class="" id="reset-btn">RESET</button>
+        <button class="" id="operator-btn">=</button>
+      </section>
+  </main>
 </body>
 </html>
