add the css for the active states

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
 
      <!-- button section -->
       <section id="btn-container">
-        <button class="digit-btn">7</button>
-        <button class="digit-btn">8</button>
-        <button class="digit-btn">9</button>
+        <button class="digit-btn" id="seven-btn">7</button>
+        <button class="digit-btn" id="eight-btn">8</button>
+        <button class="digit-btn" id="nine-btn">9</button>
         <button class="" id="del-btn">DEL</button>
-        <button class="digit-btn">4</button>
-        <button class="digit-btn">5</button>
-        <button class="digit-btn">6</button>
-        <button class="digit-btn">+</button>
-        <button class="digit-btn">1</button>
-        <button class="digit-btn">2</button>
-        <button class="digit-btn">3</button>
-        <button class="digit-btn">-</button>
-        <button class="digit-btn">.</button>
-        <button class="digit-btn">0</button>
-        <button class="digit-btn">/</button>
-        <button class="digit-btn">x</button>
+        <button class="digit-btn" id="four-btn">4</button>
+        <button class="digit-btn" id="five-btn">5</button>
+        <button class="digit-btn" id="six-btn">6</button>
+        <button class="digit-btn" id="plus-btn">+</button>
+        <button class="digit-btn" id="one-btn">1</button>
+        <button class="digit-btn" id="two-btn">2</button>
+        <button class="digit-btn" id="three-btn">3</button>
+        <button class="digit-btn" id="minus-btn">-</button>
+        <button class="digit-btn" id="">.</button>
+        <button class="digit-btn" id="zero-btn">0</button>
+        <button class="digit-btn" id="divide-btn">/</button>
+        <button class="digit-btn" id="multiply-btn">x</button>
         <button class="" id="reset-btn">RESET</button>
         <button class="" id="operator-btn">=</button>
       </section>
