--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <button class="gray-btn digit-btn" id="four-btn">4</button>
         <button class="gray-btn digit-btn" id="five-btn">5</button>
         <button class="gray-btn digit-btn" id="six-btn">6</button>
-        <button class="gray-btn" id="plus-btn">+</button>
+        <button class="gray-btn operator-btns" id="plus-btn" data-operator = "+">+</button>
         <button class="gray-btn digit-btn" id="one-btn">1</button>
         <button class="gray-btn digit-btn" id="two-btn">2</button>
         <button class="gray-btn digit-btn" id="three-btn">3</button>
-        <button class="gray-btn" id="minus-btn">-</button>
+        <button class="gray-btn operator-btns" id="minus-btn" data-operator = "-">-</button>
         <button class="gray-btn" id="decimal-btn">.</button>
         <button class="gray-btn digit-btn" id="zero-btn">0</button>
-        <button class="gray-btn" id="divide-btn">/</button>
-        <button class="gray-btn" id="multiply-btn">x</button>
+        <button class="gray-btn operator-btns" id="divide-btn" data-operator = "/">/</button>
+        <button class="gray-btn operator-btns" id="multiply-btn" data-operator = "*">x</button>
         <button class=" navy-btn" id="reset-btn">RESET</button>
-        <button class="" id="operator-btn">=</button>
+        <button class="" id="equal-btn">=</button>
       </section>
   </main>
 </body>
